# NPEC-Hades-Deployment

./: .gitignore  pyproject.toml
npec_hades_deployment/src/: branch_loc.csv  main.py
npec_hades_deployment/src/data/: postprocessing.py  processing.py  timeseries_processing.py
npec_hades_deployment/src/inference/: features.py  inference.py  roots_segmentation.py  rsml.py  timeseries_consistency.py  timeseries_correction.py  timeseries_rs.py
npec_hades_deployment/src/inoculation/: inoculate.py
npec_hades_deployment/src/input/: 134_10_exp74_B1_002_ROOT2_Fish Eye Corrected_A0.jxl
npec_hades_deployment/src/timeseries/90_13_Exp32_coumarins_01_ROOT1_Fish Eye Corrected_A0/90_13_Exp32_coumarins_01_ROOT1_Fish Eye Corrected_A0/: measurements.xlsx
npec_hades_deployment/src/utils/: helpers.py
