[project]
name = "npec-hades-deployment"
version = "0.0.1"
description = "Package covering data processing, model training and inoculation using the Hades system and Opentrons OT-2 within NPEC"
authors = [
    {name = "Borislav Nachev, Vlad Bogdan Narcis Matache, Wesley van Gaalen, Francisco R. Mansilha, Fedor Chursin, Jason van Hamond, Alexi Kehayias"}
]
readme = "README.md"
requires-python = ">=3.10.0, <=3.10.14"
dependencies = [
    "opencv-python (<4.12)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "patchify (>=0.2.3,<0.3.0)",
    "absl-py (>=2.3.1,<3.0.0)",
    "google-api-python-client (>=2.187.0,<3.0.0)",
    "wrapt (>=2.0.1,<3.0.0)",
    "gast (>=0.7.0,<0.8.0)",
    "astunparse (>=1.6.3,<2.0.0)",
    "termcolor (>=3.2.0,<4.0.0)",
    "opt-einsum (>=3.4.0,<4.0.0)",
    "flatbuffers (>=25.9.23,<26.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pillow-jxl-plugin (>=1.3.7,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "npec_hades_deployment" }]

[tool.poetry.dependencies]
python = ">=3.10.0, <=3.10.14"
tensorflow-io-gcs-filesystem = { version = "0.30.0", markers = "sys_platform == 'linux' or sys_platform == 'win32'" }
tensorflow = { version = "2.10.0", markers = "sys_platform == 'linux' or sys_platform == 'win32'" }
tensorflow-intel = { version = "2.10.0", markers = "sys_platform == 'win32'" }
tensorflow-macos = { version = "2.10.0", markers = "sys_platform == 'darwin'" }
opencv-python = "^4.9.0.80"
pandas = "^2.2.2"
patchify = "^0.2.3"
matplotlib = "^3.8.4"
networkx = "^3.3"
scikit-image = "^0.23.2"
skan = "^0.11.1"
numpy = "1.23.5"
rich = "13.7.0"
plotly = "^5.22.0"
nbformat = "^5.10.4"
typer = "^0.9.0"
scipy = "^1.13.1"
uvicorn = "^0.30.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx_rtd_theme = "2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
coverage = "^7.5.1"

[tool.poetry.group.robotics.dependencies]
urllib3 = "1.26.18"
opentrons = "^7.3.0"
typing-extensions = "4.12.0"
sniffio = "1.3.1"
uvicorn = "^0.30.1"
